--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,4 +1,16 @@
-{ "version": 2, 
-"rewrites": [{ "source": "/(.*)", "destination": "/api" }],
-  "outputDirectory": "build"
- }
+{
+    "version": 2,
+    "builds": [
+      {
+        "src": "server.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "rewrites": [
+      {
+        "source": "/api/(.*)",
+        "destination": "/server.js"
+      }
+    ],
+  }
+  
