--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
+    "start": "node server.js",
     "test": "server:nodemon server.js"
   },
   "author": "",
